# mcp-package-manager

./: COMMANDS.md  README.md  pyproject.toml  requirements.txt
src/package_manager/: server.py
src/package_manager_mcp/: __init__.py  config.py  server.py
src/package_manager_mcp/package_managers/: __init__.py  npm_manager.py  uv_manager.py
src/package_manager_mcp/tools/: definitions.py  handlers.py
src/package_manager_mcp/utils/: responses.py  security.py  subprocess.py
tests/: test_server.py
