[project]
name = "package-manager-mcp"
version = "0.1.0"
description = "Package manager for Claude desktop using MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "aiohttp>=3.9.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-aiohttp>=1.0.4",
    "logging>=0.4.9.6",
    "pytest-cov>=4.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
]

[[project.authors]]
name = "Gurusharan Gupta"
email = "gupta.rp.gurusharan@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
package-manager = "package_manager_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
